# flow_test_engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker-publish.yml
backend/: .env.example  README.md  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  llm_config.py  task.py  template.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  case_template.py  llm_config.py  task.py
backend/app/schemas/: __init__.py  llm_config.py  task.py  template.py
backend/app/services/: __init__.py  case_generator.py  document_parser.py  llm_service.py  result_extractor.py
backend/config/: prompt.md
cmd/api/: main.go
config/: Test Case Generation Flow.json  config.yaml.example  prompt.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ClarificationModal.module.css  ClarificationModal.tsx  CreateTaskModal.module.css  CreateTaskModal.tsx  (+10 more)
internal/: start.go
internal/api/: case_template.go  task.go
internal/assemble/: task.go
internal/dto/: case_template.go  file.go  langflow.go  task.go
internal/errcodes/: errcodes.go
internal/middleware/: cors.go  logger.go
internal/repo/: case_template.go  task.go
internal/service/: case_template.go  langflow.go  task.go
pkg/common/: config.go  jsonresp.go.bak
pkg/infrastructure/: mysql.go
scripts/: init_db.sql  setup.sh
utils/: file.go  type-format.go
(+22 files in other folders)
